# gradient_engine

./: .gitignore  CMakeLists.txt  README.md
Assets/Shaders/: AddShader.frag  BlurShader.frag  BlurShader.vert  BypassPostprocessingShader.frag  FilterBrightShader.frag  HdrShader.frag  LineShader3d.frag  LineShader3d.vert  OutlineAddShader.frag  PostProcessingShader.vert  Shader3d.frag  Shader3d.vert  ShadowShader.frag  ShadowShader.vert  SimpleShader3d.frag  SimpleShader3d.vert  SkyboxShader.frag  SkyboxShader.vert
imgui-1.79/: CMakeLists.txt
source/: main.cpp
source/Graphics/: AddShader.cpp  AddShader.h  BloomEffectRenderer.cpp  BloomEffectRenderer.h  BlurEffectRenderer.cpp  BlurEffectRenderer.h  BlurShader.cpp  BlurShader.h  BlurShaderGroup.cpp  BlurShaderGroup.h  BypassPostprocessingShader.h  BypassShader.cpp  BypassShader.h  CMakeLists.txt  Camera.cpp  Camera.h  CubeMap.cpp  FilterBrightShader.cpp  FilterBrightShader.h  FreeCameraController.cpp  FreeCameraController.h  GeometryDefinition.cpp  GeometryDefinition.h  GlfwKeyCodes.h  HdrShader.cpp  HdrShader.h  InputClient.cpp  InputClient.h  InputClientBase.h  InputServer.cpp  InputServer.h  KeyCodes.h  Lights.cpp  Lights.h  Material.h  Mesh.cpp  Mesh.h  OrbitCameraController.cpp  OutlineAddShader.h  RenderObject.h  (+21 more)
source/Graphics/Graphics/: BloomEffectRenderer.cpp  BloomEffectRenderer.h  BlurEffectRenderer.cpp  BlurEffectRenderer.h  BlurShaderGroup.cpp  BlurShaderGroup.h  Camera.cpp  Camera.h  Colors.cpp  Colors.h  CubeMap.cpp  CubeMap.h  FreeCameraController.cpp  FreeCameraController.h  GeometryDefinition.cpp  GeometryDefinition.h  GetAngle.cpp  GetAngle.h  GlfwKeyCodes.h  InputClient.cpp  InputClient.h  InputServer.cpp  InputServer.h  InputServerEvents.h  KeyCodes.h  Lights.cpp  Material.h  Mesh.cpp  Mesh.h  OrbitCameraController.cpp  OrbitCameraController.h  RenderObject.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  RenderWindow.cpp  RenderWindow.h  Renderer.cpp  Renderer.h  (+5 more)
source/Graphics/Graphics/Shaders/: AddShader.cpp  AddShader.h  BlurShader.cpp  BlurShader.h  BypassPostprocessingShader.cpp  BypassPostprocessingShader.h  BypassShader.cpp  BypassShader.h  FilterBrightShader.cpp  FilterBrightShader.h  HdrShader.cpp  HdrShader.h  LineShader3d.cpp  LineShader3d.h  OutlineAddShader.cpp  OutlineAddShader.h  Shader.cpp  Shader.h  Shader3d.cpp  Shader3d.h  ShadowShader.cpp  ShadowShader.h  SimpleShader3d.cpp  SimpleShader3d.h  SkyboxShader.cpp  SkyboxShader.h
source/Graphics/Shaders/: BlurShader.cpp  BlurShader.h  BypassPostprocessingShader.h  FilterBrightShader.h  HdrShader.h  OutlineAddShader.cpp  Shader.cpp  ShadowShader.cpp  SkyboxShader.h
source/GraphicsTest/: CMakeLists.txt  TestSceneBase.cpp  TestSceneBase.h  TestSceneBloom.cpp  TestSceneBloom.h  TestSceneBlur.cpp  TestSceneBlur.h  TestSceneBlurGroup.cpp  TestSceneFactory.cpp  TestSceneFactory.h  TestSceneImGui.cpp  TestSceneImGui.h  TestSceneRenderer.cpp  TestSceneRenderer.h  main.cpp
source/GraphicsTest/GraphicsTest/: TestSceneBase.cpp  TestSceneBase.h  TestSceneBloom.cpp  TestSceneBlur.cpp  TestSceneBlur.h  TestSceneBlurGroup.cpp  TestSceneBlurGroup.h  TestSceneFactory.cpp  TestSceneFactory.h  TestSceneImGui.cpp  TestSceneImGui.h  TestSceneLine.cpp  TestSceneLine.h  TestSceneRenderer.cpp  TestSceneRenderer.h  main.cpp
source/LevelEditor/: CMakeLists.txt
source/LevelEditor/LevelEditor/: DepSupplier.h  DependencyKeys.h  ImGuiBaseWindow.cpp  ImGuiBaseWindow.h  InputPriorities.h  LevelData.h  LevelEditor.cpp  LevelEditor.h  LevelObject.cpp  LevelObject.h  LevelParser.cpp  LevelParser.h  RaycastManager.cpp  RaycastManager.h  ResizeComponent.cpp  ResizeComponent.h  ResizeManager.cpp  ResizeManager.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  SelectionManager.cpp  SelectionManager.h  Util.cpp  Util.h  main.cpp
source/Math/: CMakeLists.txt  GaussianHelper.cpp  GaussianHelper.h
source/Math/Math/: GaussianHelper.cpp
source/Math/Math/Geometry/: AABB.cpp  AABB.h  Plane.cpp  Plane.h  Ray.h
source/Math/Utility/: Command.cpp  Command.h  SnappingProperty.cpp  SnappingProperty.h  UndoManager.cpp  UndoManager.h
source/MathTest/: CMakeLists.txt
source/MathTest/MathTest/: RayAABBIntersectionTest.h  SimpleTest.h  UndoManagerTest.h  main.cpp
